Les 4 Oefening 1 klaar + tabel margin probleem is opgelost

--- a/Views/People/Index.cshtml
+++ b/Views/People/Index.cshtml
@@ -6,8 +6,8 @@
 }
 
 <h2>People</h2>
-<table>
-    <tr>
+<table class="table table-bordered">
+    <tr class="table-primary">
         <th>Naam</th>
         <th>Adres</th>
     </tr>
