--- a/Views/Shared/PersonPartial.cshtml
+++ b/Views/Shared/PersonPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@model PeopleManager.Models.Person;
 
 <tr>
-    <td class="shadow p-3 bg-white rounded">@Model.Naam</td>
-    <td class="shadow p-3 bg-white rounded">@Model.Adres</td>
+    <td>@Model.Naam</td>
+    <td>@Model.Adres</td>
 </tr>
