Les 5 Oefening 1 klaar. Create, Edit en Delete -functionaliteiten toegevoegd. Enkel layout knoppen moet nog beter.

--- a/Views/People/Index.cshtml
+++ b/Views/People/Index.cshtml
@@ -10,6 +10,7 @@
     <tr class="table-primary">
         <th>Naam</th>
         <th>Adres</th>
+        <th>Acties</th>
     </tr>
     @foreach (var person in Model)
     {
@@ -17,3 +18,5 @@
     }
     
 </table>
+
+<a asp-action="Create" class="btn btn-primary">Nieuw</a>
