--- a/Views/People/Index.cshtml
+++ b/Views/People/Index.cshtml
@@ -20,3 +20,45 @@
 </table>
 
 <a asp-action="Create" class="btn btn-primary">Nieuw</a>
+
+@section Modals
+{<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="exampleModalLabel">Ben je zeker?</h5>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="modal-body">
+                Bent u zeker dat u deze persoon wilt verwijderen?
+            </div>
+            <div class="modal-footer">
+                <form method="post" asp-action="Delete">
+                    <input type="hidden" name="Id" />
+                    <a class="btn btn-secondary" data-dismiss="modal">Annuleer</a>
+                    <input type="submit" class="btn btn-primary" value="Verwijder" />
+                </form>
+            </div>
+        </div>
+    </div>
+</div>}
+
+@section Scripts {
+    <script>
+        //For each button with data-mode Delete, add a click event
+        $("[data-mode='Delete']").on("click", function () {
+            //Get the Id from the delete button
+            var id = $(this).data("id");
+            //Set the Id in the modal form
+            setDeleteId(id);
+        });
+        
+        var setDeleteId = function (id) {
+            var hiddenIdInput = $("#exampleModal input[name='Id']");
+            hiddenIdInput.val(id);
+        };
+    
+    </script>
+}
